--- a/cost-recovered/readme_en/index.html
+++ b/cost-recovered/readme_en/index.html
@@ -180,7 +180,7 @@
 <li>Plus a one-time setup fee of $800</li>
 </ul>
 <p>Please, note that these rates are indicative only and may change.</p>
-<p>See also the <a href="../faq/readme_faq_en.md">FAQ</a></p>
+<p>See also the <a href="../../faq/readme_en/">FAQ</a></p>
 <p><strong>Starting price regarding push feed for NWP data in GRIB format, or any other data</strong> is $500/month + $500 set-up fee for up to 1 Gb/day. Add 500$/month for each additional Gb per day.</p>
 <p>Please note that a $200 fee is required for any changes related to data feeds.</p></div>
             </div>
