--- a/msc-geomet/readme_en/index.html
+++ b/msc-geomet/readme_en/index.html
@@ -175,7 +175,7 @@
 </ul>
 </li>
 <li>Use cases:<ul>
-<li><a href="../usage/use-case_arthur/use-case_arthur_en/">Arthur: profits based on probability of precipitation</a><ul>
+<li><a href="../../usage/use-case_arthur/use-case_arthur_en/">Arthur: profits based on probability of precipitation</a><ul>
 <li>Access and use the MSC GeoMet API directly from a Python script</li>
 </ul>
 </li>
