--- a/msc-geomet/readme_fr/index.html
+++ b/msc-geomet/readme_fr/index.html
@@ -166,7 +166,7 @@
 </ul>
 </li>
 <li>Cas d'utilisation :<ul>
-<li><a href="../usage/use-case_arthur/use-case_arthur_fr/">Arthur : profits anticipés selon la probabilité de précipitation</a> <ul>
+<li><a href="../../usage/use-case_arthur/use-case_arthur_fr/">Arthur : profits anticipés selon la probabilité de précipitation</a> <ul>
 <li>Accédez et utiliser l'API GeoMet du SMC directement dans un script Python    </li>
 </ul>
 </li>
