--- a/readme_en/index.html
+++ b/readme_en/index.html
@@ -211,8 +211,8 @@
 </ul>
 <p><strong>Use cases</strong>:</p>
 <ul>
-<li><strong>Access and use the MSC data API directly from a Python script</strong>:<ul>
-<li><a href="usage/use-case_arthur/use-case_arthur_en/">Arthur: profits based on probability of precipitation</a></li>
+<li><strong>Access and use the MSC GeoMet data API directly from a Python script</strong>:<ul>
+<li><a href="../usage/use-case_arthur/use-case_arthur_en/">Arthur: profits based on probability of precipitation</a></li>
 </ul>
 </li>
 </ul>
