--- a/readme_fr/index.html
+++ b/readme_fr/index.html
@@ -211,8 +211,8 @@
 </ul>
 <p><strong>Cas d'utilisation</strong> :</p>
 <ul>
-<li><strong>Accéder et utiliser l'API des données du SMC directement dans un script Python</strong>:<ul>
-<li><a href="usage/use-case_arthur/use-case_arthur_fr/">Arthur : profits anticipés selon la probabilité de précipitation</a></li>
+<li><strong>Accéder et utiliser l'API GeoMet du SMC directement dans un script Python</strong>:<ul>
+<li><a href="../usage/use-case_arthur/use-case_arthur_fr/">Arthur : profits anticipés selon la probabilité de précipitation</a></li>
 </ul>
 </li>
 </ul>
