--- a/cost-recovered/readme_fr/index.html
+++ b/cost-recovered/readme_fr/index.html
@@ -170,7 +170,7 @@
 <li>Plus des frais d'installation uniques de 800 $</li>
 </ul>
 <p>Veuillez noter que ces tarifs sont donnés à titre indicatif et peuvent changer.</p>
-<p>Voir aussi la <a href="../faq/readme_faq_fr.md">FAQ</a></p>
+<p>Voir aussi la <a href="../../faq/readme_fr/">FAQ</a></p>
 <p>Le <strong>tarif de départ</strong> concernant le service de "push" des <strong>données NWP au format GRIB, ou toute autre donnée</strong>, est de 500 $/mois + 500 $ de frais d'installation pour un maximum de 1 Go/jour. Ajoutez 500$/mois pour chaque Go supplémentaire par jour.</p>
 <p>À noter que des frais de 200$ sont requis pour tout changement relié aux fils de données.</p></div>
             </div>
