--- a/msc-data/aqhi/readme_aqhi-datamartxml_en/index.html
+++ b/msc-data/aqhi/readme_aqhi-datamartxml_en/index.html
@@ -229,8 +229,7 @@
 <p>The XML observation files are produced hourly, at approximately 40 minutes past the hour, and are available on Datamart for a period of 48 hours. The XML public forecast files are issued twice per day at approximately 6am and 5pm local time and are available on the MSC Datamart for a period of 48 hours.</p>
 </li>
 <li>
-<p>Air quality observations are provided by provinces and municipalities. Provincial jurisdictions also control how observations are communicated to the public. Quebec did not agree to the publication of current air quality in the form of an air quality health index (AQHI). This explains why no observation are available at the address: <a href="https://dd.weather.gc.ca/air_quality/aqhi/que/observation/">https://dd.weather.gc.ca/air_quality/aqhi/que/observation/</a>. However, the Ministère du Développement durable, Environnement et Lutte contre les changements climatiques (MDDELCC) and Ville de Montreal also redistribute some of their data on the American AirNow portal:
-<a href="https://www.airnowtech.org/index.cfm?page=login">https://www.airnowtech.org/index.cfm?page=login</a></p>
+<p>Air quality observations are provided by provinces and municipalities. Provincial jurisdictions also control how observations are communicated to the public. Quebec did not agree to the publication of current air quality in the form of an air quality health index (AQHI). This explains why no observation are available at the address: <a href="https://dd.weather.gc.ca/air_quality/aqhi/que/observation/">https://dd.weather.gc.ca/air_quality/aqhi/que/observation/</a>. However, the Ministère du Développement durable, Environnement et Lutte contre les changements climatiques (MDDELCC) and Ville de Montreal also redistribute some of their data on <a href="https://www.epa.gov/outdoor-air-quality-data/download-daily-data">the American AirNow portal</a>.</p>
 </li>
 </ul>
 <h2 id="support">Support</h2>
