--- a/msc-data/nwp_raqdps-fw/readme_raqdps-fw-datamart_fr/index.html
+++ b/msc-data/nwp_raqdps-fw/readme_raqdps-fw-datamart_fr/index.html
@@ -156,7 +156,7 @@
 <p>Cette page décrit les données du système FireWork, un système de prévision de la qualité de l’air incorporant les émissions découlant des feux de forêt. Le système est exécuté deux fois par jour, initialisé à 00 h et 12 h UTC, en marge du Système régional de prévision déterministe de la qualité de l’air (SRPDQA). Les émissions des feux de forêt sont estimées à l’aide des données sur les points chauds et sur le combustible consommé sur les terres canadiennes et américaines, fournies par le <a href="http://cwfis.cfs.nrcan.gc.ca/">Système canadien d’information sur les feux de végétation</a> de Ressources naturelles Canada. L’ensemble de données sur les points chauds est téléchargé deux fois par jour, avant l’exécution du système FireWork. Ce système a l’avantage de présenter l’inventaire complet des émissions ainsi que les sources d’incendie intermittentes ajoutées.</p>
 <h2 id="adresse-des-donnees">Adresse des données</h2>
 <p>Les données du Datamart du SMC peuvent être <a href="../../../msc-datamart/amqp_fr/">automatiquement récupérées avec le Protocole avancé de mise en file d'attente des messages (AMQP)</a> dès qu'elles deviennent disponibles. Un <a href="../../../usage/readme_fr/">survol et exemples pour accéder et utiliser les données ouvertes du Service météorologique du Canada</a> est également disponible.</p>
-<p>Les données sont accessibles à l'adresses suivante :</p>
+<p>Les données sont accessibles à l'adresse suivante :</p>
 <ul>
 <li><a href="https://dd.meteo.gc.ca/model_raqdps-fw/10km/grib2">https://dd.meteo.gc.ca/model_raqdps-fw/10km/grib2/{HH}/{hhh}</a>         </li>
 </ul>
@@ -200,7 +200,7 @@
 <p>NOTE: TOUTES LES HEURES SONT EN UTC.</p>
 <p>La nomenclature des noms des fichiers est la suivante :</p>
 <ul>
-<li>{YYYYMMDD}T{HH}Z_MSC_RAQDPS-FW_{VAR}<em>{TYPENIVEAU}</em>{grille}(resolution}_P{hhh}.grib2</li>
+<li>{YYYYMMDD}T{HH}Z_MSC_RAQDPS-FW_{VAR}<em>{TYPENIVEAU}</em>{Grille}(resolution}_P{hhh}.grib2</li>
 </ul>
 <p>où :</p>
 <ul>
@@ -210,20 +210,25 @@
 <li><strong>Z</strong> : Fuseau horaire (heure UTC)</li>
 <li><strong>MSC</strong> : Chaîne de caractères constante pour Meteorological Service of Canada, la source des données </li>
 <li><strong>RAQDPS-FW</strong> : Chaîne de caractères constante indiquant que les données proviennent du Système régional de prévision déterministe de la qualité de l’air FireWork</li>
-<li><strong>VAR</strong> : Type de variable contenu dans le fichier (ex. : DIFF-PM2.5)</li>
-<li><strong>TYPENIVEAU</strong> : Type de niveau [SFC pour la surface , EATM pour l’intégrale de la colonne]</li>
-<li><strong>grille</strong> : Grille horizontale [rotated-latlon] </li>
+<li><strong>VAR</strong> : Type de variable contenu dans le fichier (ex. : PM2.5-Diff-RAQDPS)</li>
+<li><strong>TYPENIVEAU</strong> : Type de niveau [SFC pour la surface, EATM pour l’intégrale de la colonne]</li>
+<li><strong>Grille</strong> : Grille horizontale [RLatLon] </li>
 <li><strong>resolution</strong> : 0.09x0.09. Signifie une résolution de 0.09°(environ 10km) dans les directions longitudinale et latitudinale</li>
 <li><strong>Phhh</strong> : « P » est un caractère constant. « hhh » représente l’heure de prévision [000, 001, 002, ..., 072]</li>
 <li><strong>grib2</strong> : Chaîne de caractères constante indiquant que le format est GRIB2</li>
 </ul>
-<p>Exemples de noms de fichier :</p>
+<p>Exemple de noms de fichier :</p>
 <ul>
-<li>20200330T00Z_MSC_RAQDPS-FW_DIFF-PM2.5_SFC_rotated-latlon0.09x0.09_P024.grib2</li>
-<li>20200325T12Z_MSC_RAQDPS_PM10_EATM_rotated-latlon0.09x0.09.grib2</li>
+<li>20200521T00Z_MSC_RAQDPS-FW_PM2.5-Diff-RAQDPS_EATM_RLatLon0.09x0.09_P003.grib2</li>
 </ul>
 <h2 id="liste-des-variables">Liste des variables</h2>
-<p>XXXXXX</p>
+<p>Liste des variables 2D disponibles dans les fichiers:</p>
+<ul>
+<li>PM2.5 : Concentration des PM2.5 </li>
+<li>PM2.5-Diff-RAQDPS : Différence de concentration des PM2.5 avec le modèle SRPDQA. Indique la contribution des feux de forêt à la concentration des PM2.5</li>
+<li>PM10 : Concentration des PM10</li>
+<li>PM10-Diff-RAQDPS : Différence de concentration des PM10 avec le modèle SRPDQA. Indique la contribution des feux de forêt à la concentration des PM10</li>
+</ul>
 <h2 id="support">Support</h2>
 <p>Pour toute question relative à ces données, merci de nous contacter à l'adresse : <a href="mailto:ec.dps-client.ec@canada.ca">ec.dps-client.ec@canada.ca</a></p>
 <h2 id="annonces-de-la-liste-de-diffusion-dd_info">Annonces de la liste de diffusion dd_info</h2>
