--- a/usage/use-case_arthur/use-case_arthur_en/index.html
+++ b/usage/use-case_arthur/use-case_arthur_en/index.html
@@ -116,11 +116,6 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#en-francais" class="nav-link">En français</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
-            
             <li class="nav-item" data-level="1"><a href="#use-case-anticipated-profits-based-on-precipitations-probability" class="nav-link">Use case: anticipated profits based on precipitations probability</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-level="2"><a href="#introduction" class="nav-link">Introduction</a>
@@ -6290,7 +6285,8 @@ h6:hover .anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="en-francais"><a href="../use_case_profits_fr/">En fran&#231;ais</a><a class="anchor-link" href="#En-fran&#231;ais">&#182;</a></h1><p><img src="https://eccc-msc.github.io/open-data/img_eccc-logo.png" alt="ECCC logo"></p>
+<p><a href="../use-case_arthur_fr/">En français</a></p>
+<p><img src="https://eccc-msc.github.io/open-data/img_eccc-logo.png" alt="ECCC logo"></p>
 <p><a href="https://eccc-msc.github.io/open-data/readme_en/">TOC</a> &gt; <a href="https://eccc-msc.github.io/open-data/usage/readme_en/">Usage overview</a> &gt; WMS request in Python</p>
 <h1 id="use-case-anticipated-profits-based-on-precipitations-probability">Use case: anticipated profits based on precipitations probability<a class="anchor-link" href="#Use-case:-anticipated-profits-based-on-precipitations-probability">&#182;</a></h1><h2 id="introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><p>Weather, climate and water data from <a href="https://eccc-msc.github.io/open-data/msc-geomet/readme_en/">MSC GeoMet</a> geospatial web services can be easily used to predict demand associated with certain products or services. This usage example show how to extract and process raw meteorological data with <a href="https://www.python.org/">Python</a> programming language to create a tool to calculate anticipated profits from sales depending on meteorological conditions. This use case teaches you how to:</p>
 <ul>
@@ -6651,10 +6647,10 @@ h6:hover .anchor-link {
 
 
 
-<div id="8111c78b-ec73-4b48-85a1-2cfe9d5b995d"></div>
+<div id="8dee6d01-0884-478c-b282-09751de0003d"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#8111c78b-ec73-4b48-85a1-2cfe9d5b995d');
+var element = $('#8dee6d01-0884-478c-b282-09751de0003d');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
@@ -7575,10 +7571,10 @@ $$ m = \frac{y_2 - y_1}{x_2 - x_1} = \frac{30 - 10}{100 - 30}$$$$ n_{umbrella} =
 
 
 
-<div id="0c57b132-b6d9-47fa-adf2-798903d49d77"></div>
+<div id="c8dd4d79-caef-4ac2-aebc-396ce155a7bb"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#0c57b132-b6d9-47fa-adf2-798903d49d77');
+var element = $('#c8dd4d79-caef-4ac2-aebc-396ce155a7bb');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
