--- a/usage/use-case_arthur/use-case_arthur_fr/index.html
+++ b/usage/use-case_arthur/use-case_arthur_fr/index.html
@@ -6285,7 +6285,7 @@ h6:hover .anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="../use_case_profits_en/">In English</a></p>
+<p><a href="../use-case_arthur_en/">In English</a></p>
 <p><img src="https://eccc-msc.github.io/open-data/img_eccc-logo.png" alt="ECCC logo"></p>
 <p><a href="https://eccc-msc.github.io/open-data/readme_fr/">TdM</a> &gt; <a href="https://eccc-msc.github.io/open-data/usage/readme_fr/">Aperçu de l'utilisation</a> &gt; Requêtes WMS en Python</p>
 <h1 id="cas-dutilisation-profits-anticipes-selon-la-probabilite-de-precipitations">Cas d'utilisation : profits anticip&#233;s selon la probabilit&#233; de pr&#233;cipitations<a class="anchor-link" href="#Cas-d'utilisation-:-profits-anticip&#233;s-selon-la-probabilit&#233;-de-pr&#233;cipitations">&#182;</a></h1><h2 id="introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><p>Les données météorologiques, climatiques et hydrométriques des services web géospatiaux <a href="https://eccc-msc.github.io/open-data/msc-geomet/readme_fr/">GeoMet du SMC</a> peuvent aisément être utilisées pour prévoir la demande associée à certains produits ou services. Cet exemple de cas d'utilisation démontre comment extraire et traiter les données météorologiques brutes à l'aide du langage de programmation <a href="https://www.python.org/">Python</a> afin de créer un outil qui permet de calculer les profits anticipés de la vente d'un produit dont la demande est affectée par les conditions météorologiques. Il permet d'apprendre comment :</p>
@@ -6652,10 +6652,10 @@ h6:hover .anchor-link {
 
 
 
-<div id="38338021-42ac-4599-8f9a-f814c2bdf050"></div>
+<div id="f0884f83-b97e-47b1-a61a-15505c50ea9e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#38338021-42ac-4599-8f9a-f814c2bdf050');
+var element = $('#f0884f83-b97e-47b1-a61a-15505c50ea9e');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
@@ -7578,10 +7578,10 @@ $$ m = \frac{y_2 - y_1}{x_2 - x_1} = \frac{30 - 10}{100 - 30}$$$$ n_{parapluies}
 
 
 
-<div id="e9da7b3a-31f2-4489-b668-5761607c0a95"></div>
+<div id="2a716e3f-b702-43ef-ab76-70f4379e2df2"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#e9da7b3a-31f2-4489-b668-5761607c0a95');
+var element = $('#2a716e3f-b702-43ef-ab76-70f4379e2df2');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
