--- a/faq/readme_en/index.html
+++ b/faq/readme_en/index.html
@@ -222,7 +222,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#is-it-possible-to-access-the-pollutant-emission-data-used-to-calculate-the-air-quality-health-index" class="nav-link">Is it possible to access the pollutant emission data used to calculate the Air Quality Health Index ?</a>
+            <li class="nav-item" data-level="2"><a href="#is-it-possible-to-access-past-observed-air-quality-data-and-pollutant-emission-data-used-to-calculate-the-air-quality-health-index" class="nav-link">Is it possible to access past observed air quality data and pollutant emission data used to calculate the Air Quality Health Index ?</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -269,7 +269,7 @@
 <li><a href="#can-i-have-csv-minimum-and-maximum-forecast-temperature">Can I have CSV minimum and maximum forecast temperature ?</a></li>
 <li><a href="#can-i-have-rainfall-amount-data">Can I have rainfall amount data ?</a></li>
 <li><a href="#i-do-not-see-a-condition-under-the-corresponding-element-of-the-citypage-xml-file-is-this-normal">I do not see a condition under the corresponding element of the Citypage XML file, is this normal ?</a></li>
-<li><a href="#is-it-possible-to-access-the-pollutant-emission-data-used-to-calculate-the-Air-Quality-Health-Index">Is it possible to access the pollutant emission data used to calculate the Air Quality Health Index ?</a></li>
+<li><a href="#is-it-possible-to-access-past-observed-air-quality-data-and-pollutant-emission-data-used-to-calculate-the-air-quality-health-index">Is it possible to access past observed air quality data and pollutant emission data used to calculate the Air Quality Health Index ?</a></li>
 <li><a href="#is-there-a-discussion-platform-for-users">Is there a discussion platform for users ?</a></li>
 </ul>
 <h2 id="can-we-have-access-to-the-verification-scores-of-your-numerical-weather-prediction-models-and-how-do-they-compare-with-other-international-centres">Can we have access to the verification scores of your numerical weather prediction models and how do they compare with other international centres ?</h2>
@@ -503,10 +503,10 @@ are available, whereas with AMQP, user is advised without sending any request.</
 <h2 id="i-do-not-see-a-condition-under-the-corresponding-element-of-the-citypage-xml-file-is-this-normal">I do not see a condition under the corresponding element of the Citypage XML file, is this normal ?</h2>
 <p>Some weather stations are automatic (unmanned) and do not report the current condition. If you look to the corresponding page on our web site, for example <a href="https://weather.gc.ca/city/pages/ab-50_metric_e.html">Edmonton</a>, you will see that it is written <em>Not observed</em> for the condition.</p>
 <p>This is why there is no icon or condition reported in the corresponding Citypage XML file.</p>
-<h2 id="is-it-possible-to-access-the-pollutant-emission-data-used-to-calculate-the-air-quality-health-index">Is it possible to access the pollutant emission data used to calculate the Air Quality Health Index ?</h2>
-<p>In Canada, these data are generally produced by the provinces and collected by ECCC. This is true for both real time and "official" data that are revised 6 months (or more) later.  These official data are assembled in the <a href="http://data.ec.gc.ca/data/air/monitor/national-air-pollution-surveillance-naps-program/?lang=en">National Air Pollution Surveillance (NAPS)</a> program, now on the ECCC data catalogue.</p>
-<p>Also, a number of Canadian stations are available in the U.S. database <a href="https://www.airnow.gov/aqi-and-health/">AirNow</a>, and are also downloadable from the Open Project <a href="https://openaq.org/#/map?parameter=o3&amp;_k=6p035e">OpenAQ</a>.</p>
-<p>Finally, the <a href="https://www.canada.ca/en/environment-climate-change/services/national-pollutant-release-inventory/tools-resources-data/exploredata.html">National Pollutant Release Inventory</a> can be accessed. Please note that polluting facilities are given considerable time to report their emissions, therefore the information is published more than one year after the current date, on an annual basis.</p>
+<h2 id="is-it-possible-to-access-past-observed-air-quality-data-and-pollutant-emission-data-used-to-calculate-the-air-quality-health-index">Is it possible to access past observed air quality data and pollutant emission data used to calculate the Air Quality Health Index ?</h2>
+<p>In Canada, observed air quality data are generally produced by provinces and municipalities and collected by ECCC. This is true for both real-time and "official" data that are subject to detailed quality control and are usually published the following year. These official data are assembled in the <a href="http://data.ec.gc.ca/data/air/monitor/national-air-pollution-surveillance-naps-program/?lang=en">National Air Pollution Surveillance (NAPS)</a> program, now on the ECCC data catalogue.</p>
+<p>Also, a number of Canadian stations are available in the U.S. <a href="https://www.airnow.gov/aqi-and-health/">AirNow</a> database, and are also downloadable from the Open Project <a href="https://openaq.org/#/map?parameter=o3&amp;_k=6p035e">OpenAQ</a>. On the other hand, ECCC only publishes observations in the form of the Air Quality Health Index, which can be found in the <a href="../../msc-data/aqhi/readme_aqhi_en/">MSC Datamart</a>.</p>
+<p>Finally, the <a href="https://www.canada.ca/en/environment-climate-change/services/national-pollutant-release-inventory/tools-resources-data/exploredata.html">National Pollutant Release Inventory</a> is available. Please note that polluting facilities are given considerable time to report their emissions, therefore the information is published more than one year after the current date, on an annual basis.</p>
 <h2 id="is-there-a-discussion-platform-for-users">Is there a discussion platform for users ?</h2>
 <p>A discussion platform dedicated to MSC open data has been set up by a third party to allow the user community to interact more easily and benefit from each other's experience:</p>
 <p><a href="http://meteocentre.com/help/msc-open-data/">http://meteocentre.com/help/msc-open-data/</a></p>
