--- a/msc-data/climate_indices/readme_climateindices_en/index.html
+++ b/msc-data/climate_indices/readme_climateindices_en/index.html
@@ -151,7 +151,7 @@
 <ul>
 <li><a href="../readme_climateindices-datamart_en/">NetCDF data available on the MSC Datamart</a></li>
 <li><a href="http://climate-scenarios.canada.ca/?page=downscaled-indices-data">NetCDF multi-model ensemble and individual model datasets available on the Canadian Climate Data and Scenarios site</a></li>
-<li><a href="../../../msc-geomet/readme_en/">Data available via GeoMet-Climat geospatial web services</a></li>
+<li><a href="../../../msc-geomet/readme_en/">Data available via GeoMet-Climate geospatial web services</a></li>
 </ul>
 <p>An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is available.</p>
 <h3 id="licence">Licence</h3>
