--- a/msc-data/nwp_raqdps/readme_raqdps_en/index.html
+++ b/msc-data/nwp_raqdps/readme_raqdps_en/index.html
@@ -157,7 +157,15 @@
 <li><a href="../readme_raqdps-geomet_en/">Data available via the GeoMet-Weather geospatial web services</a></li>
 <li><a href="../readme_raqdps-datamart_en/">GRIB2 data available on the MSC Datamart</a> </li>
 </ul>
-<p>An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is available.</p>
+<p>An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is available. Example of a web map configured to display the <code>RAQDPS.EATM_PM2.5</code> layer served by MSC GeoMet:</p>
+<div id="map" style="height: 400px;"></div>
+
+<div id="controller" role="group" aria-label="Animation controls" style="background: #ececec; padding: 0.5rem;">
+  <button id="play" class="btn btn-primary btn-sm" type="button"><i class="fa fa-play" style="padding: 0rem 1rem"></i></button>
+  <button id="pause" class="btn btn-primary btn-sm" type="button"><i class="fa fa-pause" style="padding: 0rem 1rem"></i></button>
+  <span id="info" style="padding-left: 0.5rem;"></span>
+</div>
+
 <h3 id="licence">Licence</h3>
 <p>The <a href="../../../licence/readme_en/">end-user licence for Environment and Climate Change Canada's data servers</a> specifies the conditions of use of this data.</p>
 <h3 id="metadata">Metadata</h3>
@@ -172,7 +180,28 @@
 <li><a href="http://collaboration.cmc.ec.gc.ca/cmc/CMOI/product_guide/docs/tech_notes/technote_raqdps_e.pdf">Technical note</a></li>
 </ul>
 <h2 id="changelog">Changelog</h2>
-<p>The chronology of changes to operational systems is available <a href="../changelog_raqdps_en/">in the changelog</a>.</p></div>
+<p>The chronology of changes to operational systems is available <a href="../changelog_raqdps_en/">in the changelog</a>.</p>
+<p><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.css" integrity="sha256-rQq4Fxpq3LlPQ8yP11i6Z2lAo82b6ACDgd35CKyNEBw=" crossorigin="anonymous" />
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
+<script>
+    function isIE() {
+      return window.navigator.userAgent.match(/(MSIE|Trident)/);
+    }
+    var head = document.getElementsByTagName('head')[0];
+    var js = document.createElement("script");
+    js.type = "text/javascript";
+    if (isIE())
+    {
+        js.src = "../../../js/raqdps_ie.js";
+        document.getElementById("controller").setAttribute("hidden", true);
+    }
+    else
+    {
+        js.src = "../../../js/raqdps.js";
+    }
+    head.appendChild(js);
+</script></p></div>
             </div>
         </div>
 
