--- a/readme_fr/index.html
+++ b/readme_fr/index.html
@@ -242,7 +242,7 @@
 <h2 id="foire-aux-questions">Foire aux questions</h2>
 <p>Les questions les plus fréquemment posées au sujet des données ouvertes du SMC sont rassemblées dans une <a href="../faq/readme_fr/">FAQ</a>. Si vous ne trouvez pas la réponse à votre question, n'hésitez pas à nous contacter.</p>
 <h2 id="votre-avis-nous-interesse">Votre avis nous intéresse</h2>
-<p>Afin que la documentation des données ouvertes du Service météorologique du Canadado réponde à vos besoins, merci de nous faire part de votre avis en répondant à ce court <a href="https://eccc.sondage-survey.ca/f/s.aspx?s=35b3c882-2af9-488f-ad98-9112d2892b8f&amp;lang=FR">questionnaire</a>.</p>
+<p>Afin que la documentation des données ouvertes du Service météorologique du Canada réponde à vos besoins, merci de nous faire part de votre avis en répondant à ce court <a href="https://eccc.sondage-survey.ca/f/s.aspx?s=35b3c882-2af9-488f-ad98-9112d2892b8f&amp;lang=FR">questionnaire</a>.</p>
 <h2 id="contactez-nous">Contactez-nous</h2>
 <p>Le support aux usagers est offert sur la base du meilleur effort durant les heures de travail normales. Les utilisateurs qui demandent de l'aide sont invités à <a href="https://meteo.gc.ca/mainmenu/contact_us_f.html">communiquer avec nous</a>.</p></div>
             </div>
